# NovelTranslate-v1.1.5

./: .env.example  .gitignore  .gitkeep  COMMIT_EDITMSG  LICENSE  README.md  agent-ledger  base.html  chapter.html  chapter_processor.py  content_extractor.py  custom.css  dashboard.html  dashboard.js  epub_generator.py  index  login.html  main  models.py  novel.html  output_generator.py  pyproject.toml  replit-agent  requirements.txt  test_novel.txt  translation_service.py
